# sgt_version_rust

./: Cargo.toml  README.md
src/: App.tsx  database.rs  index.css  main.rs  models.rs
src/components/: Dashboard.tsx  Header.tsx  Layout.tsx  ProjectCard.tsx  ProjectGrid.tsx  ProjetsList.tsx  Sidebar.tsx  TravauxList.tsx
src/data/: mockData.ts
src/handlers/: mod.rs  projet_handlers.rs  travail_handlers.rs  utilisateur_handlers.rs
src/services/: api.ts
src/types/: index.ts
